init the .gitignore to contain a list of important files & dump folders

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
-# .NET Core
+# .NET Core debug folders / Security Ignores
+*.config
+*.vs/
+*debug/
+*appsettings.*
+*.props
+*.targets
+launchSettings.json
+*assets.json
+*.cache
