--- a/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.csproj
+++ b/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Primitives" Version="2.2.0" />
+    <PackageReference Include="System.Runtime.Caching" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
