--- a/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.Core/ThriveChurchOfficialAPI.Core.csproj
+++ b/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.Core/ThriveChurchOfficialAPI.Core.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="MongoDB.Bson" Version="2.7.2" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
     <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.3.0" />
