--- a/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.Services/ThriveChurchOfficialAPI.Services.csproj
+++ b/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.Services/ThriveChurchOfficialAPI.Services.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Karambolo.Extensions.Logging.File" Version="2.1.2" />
+    <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Microsoft.Extensions.Primitives" Version="2.1.6" />
     <PackageReference Include="System.Runtime.Caching" Version="4.5.0" />
   </ItemGroup>
