--- a/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.Core/ThriveChurchOfficialAPI.Core.csproj
+++ b/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.Core/ThriveChurchOfficialAPI.Core.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="2.1.1" />
     <PackageReference Include="MongoDB.Bson" Version="2.7.2" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
     <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.3.0" />
@@ -13,6 +14,7 @@
 
   <ItemGroup>
     <Folder Include="Extensions\" />
+    <Folder Include="System\AuthHandler\" />
   </ItemGroup>
 
   <ItemGroup>
