--- a/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.Services/ThriveChurchOfficialAPI.Services.csproj
+++ b/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.Services/ThriveChurchOfficialAPI.Services.csproj
@@ -5,8 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Microsoft.Extensions.Primitives" Version="2.1.6" />
+    <PackageReference Include="Serilog" Version="2.8.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
     <PackageReference Include="System.Runtime.Caching" Version="4.5.0" />
   </ItemGroup>
 
