--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ pool:
 
 variables:
   solution: 'API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.sln'
-  buildPlatform: 'Any CPU'
+  buildPlatform: 'win10-x64'
   buildConfiguration: 'Release'
 
 steps:
@@ -24,10 +24,5 @@ steps:
 - task: VSBuild@1
   inputs:
     solution: '$(solution)'
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
-
-- task: VSTest@2
-  inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
