--- a/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.Core/ThriveChurchOfficialAPI.Core.csproj
+++ b/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.Core/ThriveChurchOfficialAPI.Core.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.1" />
     <PackageReference Include="MongoDB.Bson" Version="2.7.2" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
     <PackageReference Include="Serilog" Version="2.8.0" />
