--- a/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.Services/ThriveChurchOfficialAPI.Services.csproj
+++ b/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.Services/ThriveChurchOfficialAPI.Services.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Primitives" Version="2.1.6" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Primitives" Version="2.2.0" />
     <PackageReference Include="Serilog" Version="2.8.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
