--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,8 +3,12 @@
 # Add steps that publish symbols, save build artifacts, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
-trigger:
+pr:
+- dev
 - master
+
+trigger:
+  - master
 
 pool:
   vmImage: 'windows-latest'
