--- a/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.csproj
+++ b/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.csproj
@@ -18,6 +18,8 @@
 
   <ItemGroup>
     <PackageReference Include="AspNetCoreRateLimit" Version="2.1.0" />
+    <PackageReference Include="Hangfire" Version="1.7.11" />
+    <PackageReference Include="Hangfire.Mongo" Version="0.6.7" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.1" />
