--- a/Upgrade Scripts/1/ThriveAPIMongoUpgrade/ThriveAPIMongoUpgrade.csproj
+++ b/Upgrade Scripts/1/ThriveAPIMongoUpgrade/ThriveAPIMongoUpgrade.csproj
@@ -5,4 +5,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    <PackageReference Include="MongoDB.Bson" Version="2.17.1" />
+    <PackageReference Include="MongoDB.Driver" Version="2.17.1" />
+  </ItemGroup>
+
 </Project>
