--- a/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.Repositories/ThriveChurchOfficialAPI.Repositories.csproj
+++ b/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.Repositories/ThriveChurchOfficialAPI.Repositories.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.S3" Version="3.7.100.14" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.10" />
     <PackageReference Include="MongoDB.Bson" Version="2.19.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.19.0" />
