--- a/.github/workflows/aspnetcore.yml
+++ b/.github/workflows/aspnetcore.yml
@@ -1,6 +1,6 @@
 name: ASP.NET Core CI
 
-on: 
+on:
   pull_request:
     branches:
     - dev
@@ -13,12 +13,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v4
+    - name: Install SSL dependencies for .NET 5
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libssl1.1
     - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 5.0.408
     - name: Restore NuGet Packages
-      run: dotnet restore "API\ThriveChurchOfficialAPI\ThriveChurchOfficialAPI.sln"
+      run: dotnet restore "API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.sln"
     - name: Build with dotnet
-      run: dotnet build -c Release "API\ThriveChurchOfficialAPI\ThriveChurchOfficialAPI.sln"
+      run: dotnet build -c Release "API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.sln"
