--- a/.github/workflows/aspnetcore.yml
+++ b/.github/workflows/aspnetcore.yml
@@ -10,14 +10,10 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
     - uses: actions/checkout@v4
-    - name: Install SSL dependencies for .NET 5
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libssl1.1
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v4
       with:
