--- a/.github/workflows/aspnetcore.yml
+++ b/.github/workflows/aspnetcore.yml
@@ -10,10 +10,17 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
+    - name: Install libssl1.1 for .NET 5
+      run: |
+        sudo apt-get update
+        # Add Ubuntu 20.04 repository to get libssl1.1
+        echo "deb http://security.ubuntu.com/ubuntu focal-security main" | sudo tee /etc/apt/sources.list.d/focal-security.list
+        sudo apt-get update
+        sudo apt-get install -y libssl1.1
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v4
       with:
