Configures API for containerization
Adds Docker support to the Thrive Church Official API project, enabling containerized development and deployment. This includes Dockerfiles for both production and debugging, docker-compose files for local orchestration, and a GitHub Actions workflow for automated deployment to AWS App Runner.

Key changes include:

- Introduces Dockerfiles for building and running the API in a containerized environment.  The Dockerfile uses multi-stage builds to optimize image size and debugging capabilities.
- Provides docker-compose files to orchestrate the API and its dependencies (e.g., MongoDB) for local development. Includes `docker-compose.yml` for production and `docker-compose.debug.yml` for debugging.
- Sets up a GitHub Actions workflow to automatically build, tag, and push Docker images to Amazon ECR, and trigger deployments to AWS App Runner on pushes to the master branch. This automates the CI/CD process.
- Adds DOCKER-DEBUGGING.md documentation that will help users learn how to setup and use Docker with the project.
- Updates .gitignore file.

--- a/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.csproj
+++ b/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.csproj
@@ -6,6 +6,10 @@
     <ApplicationIcon />
     <OutputType>WinExe</OutputType>
     <StartupObject>ThriveChurchOfficialAPI.Program</StartupObject>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..</DockerfileContext>
+    <DockerfileTag>thrive-api-debug</DockerfileTag>
+    <DockerfileBuildArguments>--target debug</DockerfileBuildArguments>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -29,6 +33,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Primitives" Version="8.0.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.15.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
     <PackageReference Include="MongoDB.Driver" Version="3.5.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.4" />
