Updates Docker image tagging strategy.
Updates the Docker image tagging strategy to use a date-based tag combined with the GitHub Actions run number. This provides a more informative and predictable tagging scheme. The previous strategy used the git SHA, which wasn't as human-readable. The 'latest' tag is no longer used, simplifying the deployment process and reducing potential confusion.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,15 +35,17 @@ jobs:
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG: ${{ github.sha }}
         run: |
+          # Generate image tag in yyyy.mm.dd.build# format
+          DATE_TAG=$(date +'%Y.%m.%d')
+          IMAGE_TAG="${DATE_TAG}.${{ github.run_number }}"
+
           # Build the Docker image
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -t $ECR_REGISTRY/$ECR_REPOSITORY:latest ./API/ThriveChurchOfficialAPI
-          
-          # Push both tags
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG ./API/ThriveChurchOfficialAPI
+
+          # Push the image
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
-          
+
           # Output the image URI for App Runner
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
