Adds health check endpoints and configures probes
Adds a health check controller and configures liveness and readiness probes. This allows container orchestration platforms like AWS App Runner to accurately determine the service's health and readiness for traffic. The docker-compose file is updated to utilize the new lightweight liveness endpoint for its health check.

Additionally, the JWT middleware is configured to work correctly behind a load balancer that terminates TLS.

*   Adds a HealthController with endpoints for liveness, readiness, and overall health.
*   Configures ASP.NET Core Health Checks.
*   Updates docker-compose to use the `/api/health/live` endpoint.
*   Sets `RequireHttpsMetadata` to false in JWT options.

--- a/API/ThriveChurchOfficialAPI/docker-compose.yml
+++ b/API/ThriveChurchOfficialAPI/docker-compose.yml
@@ -55,9 +55,9 @@ services:
     
     restart: unless-stopped
     
-    # Optional: Health check
+    # Health check using dedicated lightweight endpoint
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/api/sermons"]
+      test: ["CMD", "curl", "-f", "http://localhost:8080/api/health/live"]
       interval: 30s
       timeout: 10s
       retries: 3
