Adds sermon transcript retrieval endpoint
Implements an endpoint to retrieve sermon transcripts from Azure Blob Storage.
This enhancement allows users to access full sermon transcripts, enhancing accessibility
and engagement with the content.

- Introduces a new `TranscriptUrl` property to the `SermonMessage` response, providing
  a link to the transcript.
- Adds `Azure.Storage.Blobs` package for interacting with Azure Blob Storage.
- Implements a `TranscriptService` to handle transcript retrieval logic, injecting the
  Azure Storage connection string and container name.
- Introduces a new API endpoint `GET /series/message/{MessageId}/transcript` to retrieve
  the transcript for a specific sermon message.

--- a/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.csproj
+++ b/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <UserSecretsId> </UserSecretsId>
     <ApplicationIcon />
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <StartupObject>ThriveChurchOfficialAPI.Program</StartupObject>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..</DockerfileContext>
