--- a/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.Services/ThriveChurchOfficialAPI.Services.csproj
+++ b/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.Services/ThriveChurchOfficialAPI.Services.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.Lambda" Version="4.0.12.1" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.19.1" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Hangfire.Core" Version="1.8.22" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.22" />
