Uses OIDC role for AWS authentication
Updates the CI deploy workflow to authenticate to AWS via GitHub OIDC role assumption rather than using static access keys, improving security by removing long-lived secrets and using short-lived, role-based credentials for deployments.

Adds workflow permissions and switches the AWS credentials action to assume a configured IAM role:
- Adds id-token: write and contents: read workflow permissions to enable OIDC token exchange.
- Configures the AWS credentials action to assume an IAM role via role-to-assume instead of reading stored access key/secret.
- Removes reliance on static AWS access key and secret stored in secrets while preserving existing deployment steps and region configuration.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,10 @@ env:
   ECR_REPOSITORY: thrive-fl/thrivechurchofficialapi
   APP_RUNNER_SERVICE: thrive-api
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   deploy:
     name: Build and Deploy
@@ -23,8 +27,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: arn:aws:iam::349570132161:role/GitHub_OIDC
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Login to Amazon ECR
