Adds Redis caching to improve performance
Adds Redis as a distributed caching layer to improve API performance in production environments. This includes:

- Introduces an ICacheService abstraction for both in-memory and Redis caching.
- Implements RedisCacheService and MemoryCacheService to fulfill the contract.
- Adds CacheKeys class for standardized cache key templates.
- Integrates caching into ConfigService, EventsService, and SermonsService.
- Configures cache TTLs for different data types.
- Adds Redis connection string configuration.
- Implements pattern-based cache invalidation in Redis.

This change allows the API to scale more efficiently by reducing database load and improving response times for frequently accessed data.

--- a/API/ThriveChurchOfficialAPI/.env.example
+++ b/API/ThriveChurchOfficialAPI/.env.example
@@ -25,3 +25,6 @@ MUX_SECRET='your_mux_secret_here'
 # JWT Configuration
 JWT_SECRET_KEY='your_jwt_secret_key_at_least_32_characters_long_here'
 
+# Redis Configuration (for production caching)
+REDIS_CONNECTION_STRING='your-redis-server:6379,password=your_password'
+
