--- a/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI/appsettings.template.json
+++ b/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI/appsettings.template.json
@@ -43,6 +43,9 @@
     "ExpirationMinutes": 60,
     "RefreshTokenExpirationDays": 7
   },
+
+  // Redis Configuration (for production caching - not needed for development)
+  "RedisConnectionString": "your-redis-server:6379,password=your_password",
   
   // Rate Limiting Configuration
   "IpRateLimiting": {
