Replaces cache existence checks with single-read
Updates caching usage to read cached values in a single operation instead of checking for existence first, reducing race conditions and simplifying the cache abstraction. Also increases configuration cache TTL and tightens null handling for live sermon data.

- Removes the separate cache-exists check from the cache abstraction and concrete implementations and uses one ReadFromCache call followed by a null check.
- Adjusts service layers to read once and reuse the cached value, avoiding double lookups and potential races.
- Extends configuration cache TTL from 24 hours to 7 days.
- Adds null-safety when evaluating live sermon state to avoid null reference issues.

--- a/API/ThriveChurchOfficialAPI/.env.example
+++ b/API/ThriveChurchOfficialAPI/.env.example
@@ -24,7 +24,15 @@ MUX_SECRET='your_mux_secret_here'
 
 # JWT Configuration
 JWT_SECRET_KEY='your_jwt_secret_key_at_least_32_characters_long_here'
+JWT_ISSUER='ThriveChurchOfficialAPI'
+JWT_AUDIENCE='ThriveChurchClients'
+JWT_EXPIRATION_MINUTES='60'
+JWT_REFRESH_TOKEN_EXPIRATION_DAYS='7'
 
 # Redis Configuration (for production caching)
+# In development, in-memory cache is used automatically
+# In production, Redis is used if this is configured, otherwise falls back to in-memory
 REDIS_CONNECTION_STRING='your-redis-server:6379,password=your_password'
 
+# Azure Blob Storage Configuration (for transcripts)
+AZURE_STORAGE_CONNECTION_STRING='DefaultEndpointsProtocol=https;AccountName=youraccountname;AccountKey=youraccountkey;EndpointSuffix=core.windows.net'
