Enable AWS Lambda deployment for API
Adds a SAM-based serverless setup and CI/CD pipeline to deploy the API to AWS Lambda, improving scalability and reducing operational overhead. Integrates an automated health check to validate deployments and introduces basic monitoring and alerting for reliability.

Introduces a Lambda entrypoint for the ASP.NET Core application, defines the serverless stack with HTTP API integration, and sources configuration from a secrets manager. Configures concurrency, memory, and timeouts, and updates dependencies to target .NET 8 for Lambda runtime.

- Adds GitHub Actions workflow to build and deploy via SAM
- Introduces Lambda entrypoint for ASP.NET Core hosting
- Defines serverless resources and environment variables from secrets
- Configures alarms and notifications for errors and throttles
- Updates project with AWS Lambda packages and tool defaults
- Verifies deployment with an API health check

--- a/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.csproj
+++ b/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI.csproj
@@ -21,6 +21,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="9.0.0" />
+    <PackageReference Include="Amazon.Lambda.APIGatewayEvents" Version="2.7.1" />
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.301" />
     <PackageReference Include="AspNetCoreRateLimit" Version="5.0.0" />
     <PackageReference Include="AWSSDK.S3" Version="4.0.15.1" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
