Sets Lambda architecture to ARM64
Configures the deployment to target the ARM64 architecture for the .NET 8 runtime, enabling Graviton-based execution for improved performance and potential cost savings. No application logic changes; updates are limited to the serverless configuration.

--- a/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI/serverless.template
+++ b/API/ThriveChurchOfficialAPI/ThriveChurchOfficialAPI/serverless.template
@@ -8,6 +8,7 @@
       "Properties": {
         "Handler": "ThriveChurchOfficialAPI::ThriveChurchOfficialAPI.LambdaEntryPoint::FunctionHandlerAsync",
         "Runtime": "dotnet8",
+        "Architectures": ["arm64"],
         "CodeUri": "",
         "MemorySize": 1024,
         "Timeout": 30,
