Adds API test CI and gates deploy on success
Introduces a dedicated CI workflow to run .NET tests for the API on pushes and pull requests to dev/master, providing fast feedback and artifacted test results. Moves deployment to depend on the completion of the test workflow and only proceeds when tests succeed or when triggered manually, strengthening release quality.

Enhances reliability by enforcing test gates before deployment and aligning CI/CD with .NET 8 builds.

- Adds automated API test workflow with restore, build, and test steps
- Uploads TRX test results as artifacts for visibility
- Switches deploy trigger to workflow_run from the test workflow
- Adds conditional logic to deploy only on successful tests or manual dispatch

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,11 @@
 name: Deploy Thrive API to AWS App Runner
 
 on:
-  push:
+  # Only trigger deployment after tests pass via workflow_run
+  workflow_run:
+    workflows: ["API Tests"]
+    types:
+      - completed
     branches:
       - master
     paths:
@@ -23,6 +27,8 @@ jobs:
   deploy:
     name: Build and Deploy
     runs-on: ubuntu-latest
+    # Only run if triggered manually OR if the API Tests workflow succeeded
+    if: ${{ github.event_name == 'workflow_dispatch' || github.event.workflow_run.conclusion == 'success' }}
 
     steps:
       - name: Checkout code
